[package]
name = "ec_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a utility library for working with elliptic curve and finite field"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = [] }
