[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a utility library for working with the ECDSA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec_core = "^0.1.0"
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
sha256 = "1.4.0"
hex = "0.4.3"
